test/files/neg/t9008.scala
object Test {
  def x: List[M forSome { type M[_] }] = ???
}
