test/files/neg/t9008.check
t9008.scala:2: error: type M takes type parameters
  def x: List[M forSome { type M[_] }] = ???
              ^
one error found
